# mover

./: .replit  DEPLOYMENT.md  install-orchestrator.sh  package-lock.json  package.json  pyproject.toml  replit.md  run.py  start.sh  update-orchestrator.sh
attached_assets/: Pasted--2026-02-01T02-42-51-163439-File-watcher-started-for-mn_1769913897544.txt  Pasted--2026-02-01T04-56-15-345379-File-watcher-started-for-mn_1769922317355.txt  Pasted--2026-02-01T05-45-20-745196-File-watcher-started-for-mn_1769924907057.txt  Pasted--2026-02-01T17-27-47-923630-File-watcher-started-for-mn_1769967045982.txt  Pasted--2026-02-02T06-08-46-088552-Cleanup-error-for-2024-02-0_1770012941176.txt  Pasted--Color-Routing-System-Site-Daemon--1769928709027_1769928709028.txt  Pasted--Color-Routing-System-Site-Daemon--1769928981467_1769928981467.txt  Pasted--Color-Routing-System-Site-Daemon--1769929003907_1769929003907.txt  Pasted--Color-Routing-System-Site-Daemon-S-1769929273727_1769929273728.txt  Pasted--ERROR-Exception-in-ASGI-application-Feb-02-07-20-06-mo_1770016826265.txt  Pasted--auth-API-key-received-len-64-server-key-configured-Tru_1769966708285.txt  Pasted--grep-n-INSERT-INTO-cleanup-tasks-opt-color-routing-orc_1770011165409.txt  Pasted--proxy-Forwarding-X-API-Key-for-POST-api-sites-Dallas-h_1769967031573.txt  Pasted--python-ERROR-Exception-in-ASGI-application-Feb-02-05-3_1770010460955.txt  Pasted--python-INFO-10-63-16-117-0-POST-api-sites-Dallas-heart_1770010652059.txt  Pasted--python-INFO-172-31-204-121-0-POST-api-files-0f7215d0-7_1770017382373.txt  (+44 more)
server/: index.ts  production.ts  (+2 more)
(+32 files in other folders)
